--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <script>
         // Your web app's Firebase configuration (update with your Firebase project details)
         const firebaseConfig = {
-            apiKey: "AIzaSyCMwQFYXRvjGWuVBbFSKHDBM3kkh39nr7M",
-            authDomain: "roastmyswing-c2e76.firebaseapp.com",
-            projectId: "roastmyswing-c2e76",
-            storageBucket: "roastmyswing-c2e76.appspot.com",
-            messagingSenderId: "484693395607",
-            appId: "1:484693395607:web:b3ea7a25ead1b0062781d2",
-            measurementId: "G-B4D8BVDWLV"
+            apiKey: "",
+            authDomain: "",
+            projectId: "",
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: "",
+            measurementId: ""
 };
 
         // Initialize Firebase
